fix(text-input): realign inline text input elements

--- a/packages/components/src/components/text-input/_text-input.scss
+++ b/packages/components/src/components/text-input/_text-input.scss
@@ -310,6 +310,7 @@
 
   .#{$prefix}--text-input-wrapper.#{$prefix}--text-input-wrapper--inline {
     flex-flow: row wrap;
+    align-items: center;
   }
 
   .#{$prefix}--text-input-wrapper .#{$prefix}--label--inline {
